# ivcnotes

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  iou.circom  lib.rs  package.json
.keys/: pk.g16  vk.g16
artifacts/: iou.r1cs  iou.sym
artifacts/iou_js/: iou.wasm
circuits/: Cargo.toml  iou.circom
circuits/artifacts/: iou.r1cs  iou.sym
circuits/artifacts/iou_js/: iou.wasm
circuits/src/: lib.rs
circuits/src/circom/: iou.circom  package.json
cli/: Cargo.toml
cli/src/: address_book.rs  asset.rs  creds.rs  files.rs  id.rs  lib.rs  main.rs  note.rs  notebook.rs  tx.rs  wallet.rs
cli/src/crypto/: circuit.rs  hasher.rs  mod.rs
crates/circuits/circom/: iou.circom  package.json
crates/circuits/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
ivcnotes/: Cargo.toml
ivcnotes/examples/: keygen.rs
ivcnotes/src/: asset.rs  cipher.rs  id.rs  lib.rs  note.rs  poseidon.rs  pretty.rs  service.rs  service_schema.rs  tx.rs  wallet.rs
ivcnotes/src/circuit/: cs.rs  inputs.rs  mod.rs  test.rs
keys/: pk.g16  vk.g16
service/: Cargo.toml
service/src/: blocking.rs  lib.rs  main.rs  schema.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs  test.rs
