[workspace]
members = [
  "ivcnotes",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT or Apache-2.0"
rust-version = "1.75"
version = "0.1.0"

[workspace.dependencies]
ark-crypto-primitives = {version = "0.4.0", default-features = false}
ark-ec = {version = "^0.4.0", default-features = false}
ark-ff = {version = "^0.4.0", default-features = false}
ark-r1cs-std = {version = "0.4.0", default-features = false}
ark-relations = {version = "0.4.0", default-features = false}
ark-serialize = {version = "^0.4.0", default-features = false}
ark-std = {version = "0.4.0", default-features = false}

ark-bn254 = {version = "0.4.0"}
ark-ed-on-bn254 = {version = "0.4.0"}

digest = {version = "0.10", default-features = false}
sha2 = {version = "0.10", default-features = false}

rand = "0.8"
rand_core = {version = "0.6", default-features = false}

# arkeddsa = {git = "https://github.com/kilic/arkeddsa"}
arkeddsa = {path = "../../kilic/arkeddsa"}
