[workspace]
members = [
  "cli",
  "ivcnotes",
  "service",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT or Apache-2.0"
rust-version = "1.75"
version = "0.1.0"

[workspace.dependencies]
ark-crypto-primitives = {version = "0.4.0", default-features = false}
ark-ec = {version = "^0.4.0", default-features = false}
ark-ff = {version = "^0.4.0", features = ["std"]}
ark-r1cs-std = {version = "0.4.0", default-features = false}
ark-relations = {version = "0.4.0", default-features = false}
ark-serialize = {version = "^0.4.0", default-features = false}
ark-std = {version = "0.4.0", default-features = false}

ark-bn254 = {version = "0.4.0"}
ark-ed-on-bn254 = {version = "0.4.0"}

bincode = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

aes = "0.8.3"
cbc = {version = "0.1.2", features = ["alloc"]}
digest = {version = "0.10", default-features = false}
sha2 = {version = "0.10", default-features = false}
mongodb = "3.0.1"
bson = "2.11.0"
rand = "0.8"
rand_core = {version = "0.6", default-features = false}

arkeddsa = {git = "https://github.com/kilic/arkeddsa"}
# arkeddsa = {path = "../../kilic/arkeddsa"}

lazy_static = "1.4"

ivcnotes = {path = "ivcnotes"}
service = {path = "service"}
cli = {path = "cli"}
