[package]
name = "ivcnotes_cli"

edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-crypto-primitives.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
arkeddsa.workspace = true
digest.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true
