[package]
edition.workspace = true
license.workspace = true
name = "cli"
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10"
chrono = "0.4"
clap = {version = "4.4", features = ["derive"]}
colored = "2.0"
reqwest = {version = "0.12.5", features = ["blocking"]}

digest.workspace = true
ivcnotes.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true

bincode.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
