[package]
name = "ivcnotes"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ark-crypto-primitives.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-r1cs-std.workspace = true
ark-relations.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
arkeddsa.workspace = true
digest.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
ark-ed-on-bn254.workspace = true
ark-groth16 = "0.4"

[features]
default = ["r1cs"]

crh = ["ark-crypto-primitives/crh"]
r1cs = ["ark-crypto-primitives/r1cs", "ark-ed-on-bn254/r1cs"]
sponge = ["ark-crypto-primitives/sponge"]
