[package]
name = "ivcnotes"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-crypto-primitives.workspace = true
ark-ec.workspace = true
ark-ed-on-bn254.workspace = true
ark-ff.workspace = true
ark-groth16 = "0.4"
ark-r1cs-std.workspace = true
ark-relations.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
arkeddsa.workspace = true

rand.workspace = true
rand_core.workspace = true

aes.workspace = true
cbc.workspace = true
digest.workspace = true
sha2.workspace = true

bincode.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12.5", features = ["blocking"] }
mongodb = "3.0.1"
hex = "0.4.3"
ark-ed-on-bn254 = "0.4.0"

colored.workspace = true

[features]
default = ["r1cs", "snark"]
r1cs = ["ark-crypto-primitives/r1cs"]
snark = ["ark-crypto-primitives/snark"]
