[package]
name = "service"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "service-http"
path = "src/main.rs"

[dependencies]
ivcnotes.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
serde-derive.workspace = true

reqwest = {version = "0.12.5", features = ["blocking"]}
mongodb = "3.0.1"
bson = "2.11.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
