[package]
name = "service"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ivcnotes.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true

ark-bn254.workspace = true
ark-crypto-primitives.workspace = true
ark-ed-on-bn254.workspace = true
ark-groth16 = "0.4"
ark-r1cs-std.workspace = true
ark-relations.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
arkeddsa.workspace = true

rand.workspace = true
rand_core.workspace = true

aes.workspace = true
cbc.workspace = true
digest.workspace = true
sha2.workspace = true

bincode.workspace = true
serde.workspace = true
serde_derive.workspace = true
mongodb.workspace = true
bson.workspace = true
reqwest = {version = "0.12.5", features = ["blocking"]}


serde_json = "1.0"
