[package]
edition.workspace = true
license.workspace = true
name = "ivcnotes-wasm"
rust-version.workspace = true
version.workspace = true

[dependencies]
digest.workspace = true
ivcnotes.workspace = true
rand.workspace = true
rand_core.workspace = true

bincode.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

getrandom = {version = "0.2", features = ["js"]}
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"

[dev-dependencies]
ark-serialize.workspace = true
lazy_static.workspace = true
wasm-bindgen-test = "0.3.0"
web-sys = {version = "0.3.70", features = ["console"]}
ark-groth16.workspace = true

[lib]
crate-type = ["cdylib"]
